--- a/src/style.css
+++ b/src/style.css
@@ -6,9 +6,9 @@
     --background: #151515;
     --background-dark: #121212;
     scroll-behavior: smooth;
+    scrollbar-width: thin;
 }
 html{
-    scroll-behavior: smooth;
     max-width: 100vw;
     overflow-x: hidden;
 }
@@ -139,7 +139,6 @@ body{
     -moz-transform: translate(-3px);
     -ms-transform: translate(-3px);
     -o-transform: translate(-3px);
-    max-width: 50%;
 }
 #landing-contacts :any-link{
     color: var(--gray-text);
@@ -160,7 +159,7 @@ body{
 #landing-more-contacts{
     border: 3px solid var(--accent-darker);
     color: var(--accent);
-    width: 120px;
+    width: 135px;
     height: 40px;
     margin-top: 15px;
     margin-left: 15px;
@@ -219,7 +218,7 @@ body{
 #landing-learn-more{
     border: 3px solid var(--accent-darker);
     color: var(--accent);
-    width: 120px;
+    width: 135px;
     height: 40px;
     margin-left: 10px;
     display: flex;
